--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -59,18 +59,26 @@ bEnableColorizedEditorTabs=True
 CurrentAppliedTheme=134380265FBB4A9CA00A1DC9770217B8
 bEnableMiddleEllipsis=True
 
+[/Script/OutputLog.OutputLogSettings]
+LogTimestampMode=None
+CategoryColorizationMode=None
+bCycleToOutputLogDrawer=True
+bEnableOutputLogWordWrap=False
+bEnableOutputLogClearOnPIE=True
+OutputLogTabFilter=(MessagesFilter=Enabled,WarningsFilter=Enabled,ErrorsFilter=Enabled,FilterText="",Categories=,bSelectNewCategories=True)
+
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
 AutoSaveMaxBackups=10
 AutoSaveMethod=BackupAndRestore
 bForceCompilationAtStartup=False
 RestoreOpenAssetTabsOnRestart=AlwaysPrompt
-bMonitorContentDirectories=True
+bMonitorContentDirectories=False
 AutoReimportThreshold=3.000000
 bAutoCreateAssets=True
 bAutoDeleteAssets=True
 bDetectChangesOnStartup=True
-bPromptBeforeAutoImporting=True
+bPromptBeforeAutoImporting=False
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
@@ -148,7 +156,7 @@ bHMDForPrimaryProcessOnly=True
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@POTATOFACTORY
 LastExecutedLaunchName=POTATOFACTORY
 LastExecutedPIEPreviewDevice=
@@ -217,8 +225,16 @@ Advanced=False
 [DetailCustomWidgetExpansion]
 DynamicMeshComponent=DynamicMeshComponent.TransformCommon.Transform,DynamicMeshComponent.Physics.ConstraintsGroup
 
+[/Script/AssetManagerEditor.ReferenceViewerSettings]
+bEnableCollectionFilter=False
+EditorOnlyReferenceFilterType=Game
+bIsShowSearchableNames=True
+bEnablePluginFilter=False
+bIsShowExternalReferencers=False
+bFindPathEnabled=False
+
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Classes_Game/MusicGame
+ContentBrowserTab1.SelectedPaths=/Game/Songs
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -309,8 +325,10 @@ ToolbarOpenBPClass.ListHiddenColumns=Class
 LastLevel=/Game/ThirdPerson/Lvl_ThirdPerson
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -318,11 +336,10 @@ RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=BlueprintEditor
-OpenAssetsAtExit=/Game/LevelActors/BP_TerrainManager.BP_TerrainManager
 OpenAssetsAtExit=/Game/LevelActors/BP_TerrainPiece.BP_TerrainPiece
+OpenAssetsAtExit=/Game/LevelActors/BP_MusicPlayer.BP_MusicPlayer
 
 [PluginBrowser]
 InstalledPlugins=GeneSplicer
@@ -1718,7 +1735,7 @@ SubobjectEditor.TimeStamp=2025.10.07-16.23.28
 SubobjectEditor.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2025.10.07-16.23.25
 HierarchicalLODOutliner.LastCompileMethod=External
-MusicGame.TimeStamp=2025.11.17-15.29.18
+MusicGame.TimeStamp=2025.11.21-18.39.54
 MusicGame.LastCompileMethod=External
 GeometryScriptingCore.TimeStamp=2025.10.07-16.25.05
 GeometryScriptingCore.LastCompileMethod=Unknown
@@ -2202,18 +2219,30 @@ EditableTextBox.Navigation=True
 EditableTextBox.Localization=True
 EditableTextBox.Events=True
 K2Node_SetFieldsInStruct.PinOptions=True
+SoundWave.Subtitles=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Format=True
+SoundWave.Sound=True
+SoundWave.Analysis=True
+SoundWave.Loading=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Attenuation=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/LevelActors/BP_TerrainPiece
-MRUItem1=/Game/LevelActors/BP_TerrainManager
-MRUItem2=/Game/ThirdPerson/MainMenu/W_MainMenu
-MRUItem3=/Game/ThirdPerson/MainMenu/Lvl_MainMenu
-MRUItem4=/Game/ThirdPerson/MainMenu/BP_MainMenuPawn
-MRUItem5=/Game/ThirdPerson/Lvl_ThirdPerson
-MRUItem6=/Game/ThirdPerson/MainMenu/BP_MainMenuGameMode
-MRUItem7=/Game/LevelActors/BP_MusicPlayer
-MRUItem8=/Game/Materials/M_MusicResponse
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/Songs/WeWillRockYou
+MRUItem1=/Game/LevelActors/BP_MusicPlayer
+MRUItem2=/Game/LevelActors/BP_TerrainPiece
+MRUItem3=/Game/LevelActors/BP_TerrainManager
+MRUItem4=/Game/ThirdPerson/MainMenu/W_MainMenu
+MRUItem5=/Game/ThirdPerson/MainMenu/Lvl_MainMenu
+MRUItem6=/Game/ThirdPerson/MainMenu/BP_MainMenuPawn
+MRUItem7=/Game/ThirdPerson/Lvl_ThirdPerson
+MRUItem8=/Game/ThirdPerson/MainMenu/BP_MainMenuGameMode
+MRUItem9=/Game/Materials/M_MusicResponse
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelActors/BP_TerrainPiece.BP_TerrainPiece=0
@@ -2225,6 +2254,7 @@ MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 /Game/ThirdPerson/MainMenu/BP_MainMenuGameMode.BP_MainMenuGameMode=1
 /Game/ThirdPerson/MainMenu/W_MainMenu.W_MainMenu=0
 /Game/ThirdPerson/MainMenu/BP_MainMenuPawn.BP_MainMenuPawn=0
+/Game/Songs/WeWillRockYouWav.WeWillRockYouWav=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2280,9 +2310,9 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Script/MusicGame.CharacterBase;
 RecentlyPlaced=/Game/LevelActors/BP_MusicPlayer.BP_MusicPlayer;
 RecentlyPlaced=/Game/Songs/WeWillRockYouWav.WeWillRockYouWav;
-RecentlyPlaced=/Script/MusicGame.CharacterBase;
 RecentlyPlaced=/Game/LevelActors/BP_TerrainManager.BP_TerrainManager;
 RecentlyPlaced=/Game/LevelActors/BP_TerrainPiece.BP_TerrainPiece;
 
